# Bax

./: .gitmodules  CMakeLists.txt  README.md  do
.github/workflows/: cmake.yml
docs/: bax.ebnf.md  modules.md
include/Bax/: AST.hpp  Compiler.hpp  Lexer.hpp  Op.hpp  Parser.hpp  Scope.hpp  Token.hpp
include/Bax/Compiler/: AST.hpp  Compiler.hpp  Lexer.hpp  Parser.hpp  Token.hpp  TokenTypes.hpp
include/Bax/Runtime/: Fiber.hpp  Function.hpp  Interpreter.hpp  Object.hpp  Runner.hpp  String.hpp  UpValue.hpp  VM.hpp  Value.hpp
include/Bax/Token/: Types.hpp
include/Bax/VM/: VM.hpp  Value.hpp
samples/: 001-fizzbuzz.bax  001-hello-world.bax  001-io.bax  002-fizzbuzz.bax  002-log.bax  002-replace-in-files.bax  003-json.bax  010-replace-in-files.bax  011-dns-records.bax  100-fizzbuzz.bax
samples/esl/: Event.bax
sources/: AST.cpp  Compiler.cpp  Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
sources/Common/: Assertions.hpp  GenericLexer.cpp  GenericLexer.hpp  Log.cpp  Log.hpp  OptionParser.cpp  OptionParser.hpp  TTYEscapeSequences.hpp
sources/Compiler/: AST.cpp  AST.hpp  Compiler.cpp  Compiler.hpp  Lexer.cpp  Lexer.hpp  Parser.GrammarRules.cpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  TokenTypes.hpp
sources/Parser/: GrammarRules.cpp
sources/Runtime/: Interpreter.cpp  VM.cpp
sources/VM/: VM.cpp
tests/: CMakeLists.txt
tests/sources/: Lexer.cpp  Unit.cpp
